Update workplace with TVM v0.8 baseline

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,117 @@
-Cython
+absl-py==0.10.0
+antlr4-python3-runtime==4.8
+appdirs==1.4.3
+arrow==0.16.0
+astunparse==1.6.3
+attrs==20.1.0
+black==20.8b1
+CacheControl==0.12.6
+cachetools==4.1.1
+certifi==2019.11.28
+cffi==1.14.4
+chardet==3.0.4
+click==7.1.2
+cloudpickle==1.6.0
+colorama==0.4.3
+contextlib2==0.6.0
+cryptography==3.3.2
+Cython==0.29.21
+decorator==4.4.2
+distlib==0.3.0
+distro==1.4.0
+docopt==0.6.2
+et-xmlfile==1.0.1
+flatbuffers==1.12
+gast==0.4.0
+google-auth==1.21.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+graphviz==0.8.4
+grpcio==1.34.1
+h5py==3.1.0
+html5lib==1.0.1
+idna==2.8
+inform==1.23.0
+iniconfig==1.0.1
+ipaddr==2.2.0
+jdcal==1.4.1
+Keras==2.4.0
+Keras-Applications==1.0.8
+keras-nightly==2.5.0.dev2021032900
+Keras-Preprocessing==1.1.2
+lockfile==0.12.2
+Markdown==3.2.2
+more-itertools==8.5.0
+msgpack==0.6.2
+mxnet==1.7.0.post1
+mypy==0.782
+mypy-extensions==0.4.3
+numpy==1.19.5
+oauthlib==3.1.0
+onnx==1.7.0
+opencv-python==4.4.0.46
+openpyxl==3.0.5
+opt-einsum==3.3.0
+orderedset==2.0.3
+packaging==20.3
+pandas==1.1.4
+pathspec==0.8.0
+pep517==0.8.2
+Pillow==8.2.0
+pluggy==0.13.1
+prettytable==2.1.0
+progress==1.5
+protobuf==3.13.0
+psutil==5.7.2
+py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+pyparsing==2.4.6
+pytest==6.0.2
+python-dateutil==2.8.1
+pytoml==0.1.21
+pytz==2020.4
+PyYAML==5.4
+quantiphy==2.12.0
+regex==2020.10.28
+requests==2.25.1
+requests-oauthlib==1.3.0
+retrying==1.3.3
+rsa==4.7
+scipy==1.4.1
+six==1.15.0
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.5.0
+tensorflow-estimator==2.5.0
+termcolor==1.1.0
+tflite==2.4.0
+toml==0.10.1
+tornado==6.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+urllib3==1.25.8
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+wrapt==1.12.1
+xgboost==1.2.0
+torch==1.9.1
+torchvision==0.10.1
+scikit-image==0.17.2
 sphinx
 sphinx-intl
 sphinx-gallery
 sphinx-rtd-theme
 tlcpack-sphinx-addon
 autodocsumm
-decorator
-numpy
-scipy
-attrs
-synr
-psutil
-pytest
-six
+synr==0.4.0
 matplotlib
-torch
-tensorflow
-mxnet
-onnx
-keras
-torchvision
-tflite
 coremltools
 gluon
 gluoncv
-opencv-python
 dgl
-openpyxl
-xgboost
+cloudpickle
+tornado
